# ankita-designs-live-shopping

./: .env.example  .gitignore  AGENTS.md  DEPLOYMENT.md  README.md  docker-compose.yml  render.yaml
.reference/AtriumVerse/: .example.env  .gitignore  README.md  Untitled Diagram.drawio  atriumverse_technical_approach.drawio
.reference/AtriumVerse/backend/: .ruff.toml  init_db.py  pyproject.toml  requirements.txt
.reference/AtriumVerse/backend/app/: main.py
.reference/AtriumVerse/backend/app/api/: channel_keys.py  channels.py  key_backup.py  servers.py  ws.py
.reference/AtriumVerse/backend/app/core/: database.py
.reference/AtriumVerse/backend/app/schemas/: channel.py
.reference/AtriumVerse/frontend/: next.config.ts  package.json  pnpm-lock.yaml
backend/: .env.example  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py  redis_client.py
backend/app/models/: __init__.py  (+18 more)
backend/scripts/: backfill_vendor_public_profiles.py  check_social_tables.py  check_subscription_tables.py  delete_demo_records.py  inspect_platform_data.py  list_users.py  reset_user_password.py  seed_subscription_plans.py  seed_vendor_posts_from_products.py
database/: schema.md
docs/: social-shopping-qa-checklist.md
frontend/: .env.example  components.json  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/hooks/: useTutorial.ts
frontend/lib/: api.ts  avatar-options.ts  cart-store.ts  constants.ts  exhibition-event-bus.ts  exhibition-map-data.ts  exhibition-map-parser.ts  map-templates.ts  role-routes.ts  types.ts
(+190 files in other folders)
