[project]
name = "AtriumVerse"
version = "1"
description = "A Spatial Communication Platform"
requires-python = ">=3.11"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "asyncpg==0.31.0",
    "bcrypt==5.0.0",
    "cffi==2.0.0",
    "cleanpy==0.5.1",
    "click==8.3.1",
    "colorama==0.4.6",
    "cryptography==46.0.4",
    "dnspython==2.8.0",
    "ecdsa==0.19.1",
    "email-validator==2.3.0",
    "fastapi[standard]==0.128.0",
    "greenlet==3.3.1",
    "h11==0.16.0",
    "httptools==0.7.1",
    "idna==3.11",
    "livekit-api==1.1.0",
    "passlib==1.7.4",
    "psycopg2==2.9.11",
    "pyasn1==0.6.2",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic_core==2.41.5",
    "webauthn==2.2.0",
    "python-dotenv==1.2.1",
    "python-jose==3.5.0",
    "python-multipart==0.0.22",
    "PyYAML==6.0.3",
    "redis==7.1.0",
    "rsa==4.9.1",
    "six==1.17.0",
    "SQLAlchemy==2.0.46",
    "starlette==0.50.0",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "uvicorn==0.40.0",
    "watchfiles==1.1.1",
    "websockets==16.0",
    "alembic"
]




[tool.ruff]
line-length = 88
target-version = "py310" # Adjust to your python version

[tool.ruff.lint]
# Select rules: E (Error), F (Pyflakes), I (Isort), B (Bugbear), FAST (FastAPI)
select = ["E", "F", "I", "B", "FAST", "UP"]
ignore = []

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
